<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan">ID Pelanggan :</string>
    <string name="card_namapelanggan">Nama Pelanggan :</string>
    <string name="card_alamat">Alamat :</string>
    <string name="card_nohp">No HP :</string>
    <string name="card_terdaftar">Terdaftar :</string>
    <string name="card_hubungi">"Hubungi "</string>
    <string name="card_lihat">Lihat</string>
    <string name="card_cabang">Cabang :</string>
    <string name="card_estimasi">Estimasi Hari Ini</string>
    <string name="text_Transaksi">Transaksi</string>
    <string name="text_pelanggan">Pelanggan</string>
    <string name="text_laporan">Laporan</string>
    <string name="text_akun">Akun</string>
    <string name="text_layanan">Layanan</string>
    <string name="text_tambahan">Tambahan</string>
    <string name="text_pegawai">Pegawai</string>
    <string name="text_cabang">Cabang :</string>
    <string name="text_printer">Printer</string>
    <string name="text_siapmelayani">Siap melayani pelanggan dengan setulus hati</string>
    <string name="text_jangankecewakanpelanggan">Jangan Kecewakan Pelanggan</string>
    <string name="text_tambahpelanggan">TAMBAH PELANGGAN</string>
    <string name="text_namalengkap">"Nama Lengkap "</string>
    <string name="button_simpan">Simpan</string>
    <string name="card_pegawai">ID Pegawai :</string>
    <string name="card_namapegawai">Nama Pegawai :</string>
    <string name="text_tambahpegawai">TAMBAH PEGAWAI</string>
    <string name="validasi_nama_pelanggan">Nama pelanggan tidak boleh kosong</string>
    <string name="validasi_alamat_pelanggan">Alamat pelanggan tidak boleh kosong</string>
    <string name="validasi_nohp_pelanggan">Nomor HP pelanggan tidak boleh kosong</string>
    <string name="validasi_cabang_pelanggan">Cabang pelanggan tidak boleh kosong</string>
    <string name="tambah_pelanggan_sukses">Tambah Pelanggan Sukses</string>
    <string name="tambah_pelanggan_gagal">Tambah Pelanggan Gagal</string>
    <string name="validasi_nama_pegawai">Validasi Nama Pegawai</string>
    <string name="validasi_alamat_pegawai">validasi_alamat_pegawai</string>
    <string name="validasi_nohp_pegawai">validasi_nohp_pegawai</string>
    <string name="validasi_cabang_pegawai">validasi_cabang_pegawai</string>
    <string name="Sunting">Sunting</string>
    <string name="Hapus">Hapus</string>
    <string name="tambah_pegawai_sukses">tambah_pegawai_sukses</string>
    <string name="tambah_pegawai_gagal">tambah_pegawai_gagal</string>
    <string name="ID_Layanan">ID Layanan :</string>
    <string name="selamatpagi">Selamat Pagi</string>
    <string name="selamatsiang">Selamat Siang</string>
    <string name="selamatmalam">Selamat Malam</string>
    <string name="selamatsore">Selamat Sore</string>
    <string name="namalayanan">Nama Layanan :</string>
    <string name="harga">Harga :</string>
    <string name="tambahlayanan">TAMBAH LAYANAN</string>
    <string name="validasi_nama_layanan">validasi_nama_layanan</string>
    <string name="validasi_harga_layanan">validasi_harga_layanan</string>
    <string name="validasi_cabang_layanan">validasi_cabang_layanan</string>
    <string name="tambah_layanan_sukses">Tambah Layanan Sukses</string>
    <string name="tambah_layanan_gagal">Tambah Layanan Gagal</string>
    <string name="namaCabang">Nama Cabang</string>
    <string name="ID_Cabang">ID Cabang :</string>
    <string name="namacabang">Nama Cabang :</string>
    <string name="tambahCabang">TAMBAH CABANG</string>
    <string name="validasi_nama_cabang">validasi_nama_cabang</string>
    <string name="validasi_harga_cabang">validasi_harga_cabang</string>
    <string name="validasi_alamat_cabang">validasi_alamat_cabang</string>
    <string name="validasi_nohp_cabang">validasi_nohp_cabang</string>
    <string name="tambah_cabang_sukses">tambah_cabang_sukses</string>
    <string name="tambah_cabang_gagal">tambah_cabang_gagal</string>
    <string name="ID_Tambahan">"ID Tambahan :  "</string>
    <string name="namatambahan">Nama Tambahan :</string>
    <string name="tambahtambahan">TAMBAHKAN TAMBAHAN</string>
    <string name="edit_pegawai_sukses">Data Pegawai Berhasil Diperbarui</string>
    <string name="edit_pegawai_gagal">Data Pegawai Gagal Diperbarui</string>
    <string name="perbarui">Perbarui</string>
    <string name="edit_pegawai">Edit Pegawai</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="validasi_nama_tambahan">Validasi Nama Tambahan</string>
    <string name="validasi_alamat_tambahan">Validasi Alamat Tambahan</string>
    <string name="validasi_cabang_tambahan">Validasi Cabang Tambahan</string>
    <string name="tambah_tambahan_sukses">Tambah Tambahan Sukses</string>
    <string name="tambah_tambahan_gagal">Tambah Tambahan Gagal</string>
    <string name="ID_Pegawai">ID Pegawai</string>
    <string name="datapel">Data Pelanggan</string>
    <string name="datporsi">Data Laporan Transaksi</string>
    <string name="beladatra">Belum Ada Data Transaksi</string>
    <string name="belayater">Belum Ada Layanan Tersedia</string>
    <string name="datpeg">Data Pegawai</string>
    <string name="pilpel">Pilih Pelanggan</string>
    <string name="layut">Layanan Utama</string>
    <string name="nalay">Nama Layanan</string>
    <string name="hrg">Harga</string>
    <string name="pilay">Pilih Layanan</string>
    <string name="laytam">Layanan Tambahan</string>
    <string name="proses">Proses</string>
    <string name="kondat">Konfirmasi Data</string>
    <string name="tobay">Total Bayar</string>
    <string name="btl">Batal</string>
    <string name="pbyr">Pembayaran</string>
    <string name="slmtdtg">Selamat Datang</string>
    <string name="slum">Silahkan Login Untuk Melanjutkan</string>
    <string name="bpads">Belum Punya Akun? Daftar Sekarang</string>
    <string name="tamtam">Tambahkan Tambahan</string>
    <string name="idt">ID Transaksi</string>
    <string name="tgl">Tanggal</string>
    <string name="psn">Pesanan</string>
    <string name="ritam">Rincian Tambahan</string>
    <string name="subtam">Subtotal Tambahan</string>
    <string name="kirwa">Kirim Whatsapp</string>
    <string name="ctk">Cetak</string>
    <string name="sls">Selesai</string>
    <string name="pmp">Pilih Metode Pembayaran</string>
    <string name="bayti">Bayar Nanti</string>
    <string name="tni">Tunai</string>
    <string name="dprs">DIPROSES</string>
    <string name="lns">LUNAS</string>
    <string name="livo">Lihat Invoice</string>
    <string name="editra">Edit Transaksi</string>
    <string name="stapes">Status Pesanan</string>
    <string name="stapem">Status Pembayaran</string>
    <string name="tanggam">Tanggal Ambil (Otomatis jika status \'Diambil\')</string>
    <string name="depeg">Detail Pegawai</string>
    <string name="snt">Sunting</string>
    <string name="depel">Detail Pelanggan</string>
    <string name="bacyd">Belum Ada Cabang Yang Dipilih</string>
    <string name="pilcab">Pilih Cabang</string>
</resources>